--- a/coursera_wleproj.html
+++ b/coursera_wleproj.html
@@ -142,7 +142,7 @@ testing&lt;-pmltesting[,nona]</code></pre>
 <h3>Data preprocessing</h3>
 <p>Tried PCA but it didn’t help - will drop from the writeup</p>
 <pre><code>##    user  system elapsed 
-##  17.547   0.051  17.593</code></pre>
+##   17.20    0.05   17.24</code></pre>
 <pre><code>## 
 ## Call:
 ##  randomForest(formula = training$classe ~ ., data = trainPC) 
@@ -167,7 +167,7 @@ testing&lt;-pmltesting[,nona]</code></pre>
 
 system.time(modFit&lt;-randomForest(classe~.,data=training)) #reduce ntree=200 when it is slow</code></pre>
 <pre><code>##    user  system elapsed 
-##  19.226   0.054  19.273</code></pre>
+##  18.789   0.054  18.838</code></pre>
 <pre class="r"><code>modFit</code></pre>
 <pre><code>## 
 ## Call:
@@ -192,7 +192,7 @@ system.time(modFit&lt;-randomForest(classe~.,data=training)) #reduce ntree=200 w
 <h3>Cross-Validation</h3>
 <pre class="r"><code>pred&lt;-predict(modFit,validating)
 a&lt;-table(pred,validating$classe)
-oos&lt;-1-sum(diag(a))/sum(a)
+oos&lt;-round(1-sum(diag(a))/sum(a),4)
 a</code></pre>
 <pre><code>##     
 ## pred    A    B    C    D    E
@@ -201,7 +201,7 @@ a</code></pre>
 ##    C    0    3 1702   18    0
 ##    D    0    0    1 1589    3
 ##    E    0    0    0    1 1800</code></pre>
-<p>The estimated <strong>out of sample error is 99.63%</strong>.</p>
+<p>The estimated <strong>out of sample error is 0.37%</strong>.</p>
 </div>
 <div id="testing" class="section level3">
 <h3>Testing</h3>
